terraform/load_balancer.tf
resource "aws_lb" "practice_logs_alb" {
  name               = "${local.prefix}-lb"
  load_balancer_type = "application"
  subnets = [
    aws_subnet.practice_logs-public-a.id,
    aws_subnet.practice_logs-public-b.id
  ]
  security_groups = [aws_security_group.lb.id]
}

resource "aws_lb_target_group" "practice_logs_alb_target_group" {
  name        = "${local.prefix}-target-group"
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip"
  port        = 8000
  health_check {
    path    = "/health"
    port    = 8000
    matcher = 200
  }
  # stickiness {
  #   type        = "app_cookie"
  #   cookie_name = "drums_practice_logs"
  #   enabled     = true
  # }
}

resource "aws_lb_listener" "app_http" {
  load_balancer_arn = aws_lb.practice_logs_alb.arn
  port              = 80
  protocol          = "HTTP"
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.practice_logs_alb_target_group.arn
  }
}
